criei rotas-inicieiCrud

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
 <h1>CRUD</h1>
-<app-users></app-users>
+
+<nav>
+    <ul>
+        <li>
+
+            <a routerLink="/users">Lista de usuários</a>
+
+        </li>
+    </ul>
+</nav>
+
+<div>
+    <router-outlet></router-outlet>
+</div>
