--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,30 +1,1 @@
-<div class="bg">
-    <h3>Meu primeiro CRUD em Angular</h3>
-    <p>Que top</p>
-</div>
-
-<br>
-
-<div>
-    <h4>{{meutitulo}}</h4>
-    <p>Resultado de uma soma: {{500+520}}</p>
-    <p>{{texto1 + texto2}}</p>
-</div>
-
-<br>
-
-<div>
-    <p>{{geraTexto()}}</p>
-</div>
-
-<br>
-
-<div>
-    <p>{{cliente.id}} - {{cliente.nome}}</p>
-</div>
-
-<br>
-
-<div *ngFor="let umCliente of clientes">
-    <p *ngIf="umCliente.ativo">{{umCliente.id}} - {{umCliente.nome}}</p>
-</div>
+<p>users works!</p>
