--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,8 @@
 
 <nav>
     <ul>
-        <li>
-
-            <a routerLink="/users">Lista de usuários</a>
-
-        </li>
+        <li><a routerLink="/users">Lista de usuários</a></li>                 
+        <li><a routerLink="/users/create">Criar usuário</a></li>
     </ul>
 </nav>
 
