--- a/src/app/users/update/update.component.html
+++ b/src/app/users/update/update.component.html
@@ -1,10 +1,10 @@
 <h2>Atualizar Usuário</h2>
 <div *ngIf="request">
-    <label for="">Nome:
+    <label>Nome:
         <input placeholder="insira o nome" [(ngModel)]="request.name">
     </label>
     <br>
-    <label for="">Profissão:
+    <label>Profissão:
         <input placeholder="insira a profissão" [(ngModel)]="request.job">
     </label>
     <br>
